# Heart-Stroke-Prediction

./: LICENSE  pyproject.toml  requirements.txt
.notebooks/: heart_stroke.ipynb
