[tool.poetry]
name = "heart-stroke-prediction"
version = "0.1.0"
description = ""
authors = ["srctech <666999hc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "1.26.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pyarrow = "^17.0.0"
imblearn = "^0.0"
xgboost = "^2.1.1"
catboost = "^1.2.7"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
